# reinsurance

./: README.md  main.py  pyproject.toml
src/etl/: claims_reserving.py  data_ingestion.py  data_transformation.py  final_data_modeling.py  financial_metrics.py
src/models/: actuarial_audit.py  glm_baseline.py  predictive_analytics.py
