[project]
name = "reinsurance"
version = "0.1.0"
description = "Actuarial Pricing and Reinsurance Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "numpy",
    "pandas",
    "statsmodels",
    "xgboost",
    "scikit-learn",
    "matplotlib",
    "streamlit>=1.58.0",
    "python-dotenv>=1.2.2",
    "google-genai>=2.10.0",
    "tabulate>=0.10.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-community>=0.4.2",
    "sqlalchemy>=2.0.51",
    "duckdb-engine>=0.17.0",
]
